---
source: crates/ruff_linter/src/rules/flake8_import_conventions/mod.rs
---
ICN001 `altair` should be imported as `alt`
 --> custom.py:3:8
  |
3 | import altair  # unconventional
  |        ^^^^^^
  |
help: Alias `altair` to `alt`

ICN001 `dask.array` should be imported as `da`
 --> custom.py:4:8
  |
4 | import dask.array  # unconventional
  |        ^^^^^^^^^^
  |
help: Alias `dask.array` to `da`

ICN001 `dask.dataframe` should be imported as `dd`
 --> custom.py:5:8
  |
5 | import dask.dataframe  # unconventional
  |        ^^^^^^^^^^^^^^
  |
help: Alias `dask.dataframe` to `dd`

ICN001 `matplotlib.pyplot` should be imported as `plt`
 --> custom.py:6:8
  |
6 | import matplotlib.pyplot  # unconventional
  |        ^^^^^^^^^^^^^^^^^
  |
help: Alias `matplotlib.pyplot` to `plt`

ICN001 `numpy` should be imported as `np`
 --> custom.py:7:8
  |
7 | import numpy  # unconventional
  |        ^^^^^
  |
help: Alias `numpy` to `np`

ICN001 `pandas` should be imported as `pd`
 --> custom.py:8:8
  |
8 | import pandas  # unconventional
  |        ^^^^^^
  |
help: Alias `pandas` to `pd`

ICN001 `seaborn` should be imported as `sns`
 --> custom.py:9:8
  |
9 | import seaborn  # unconventional
  |        ^^^^^^^
  |
help: Alias `seaborn` to `sns`

ICN001 `tensorflow` should be imported as `tf`
  --> custom.py:10:8
   |
10 | import tensorflow  # unconventional
   |        ^^^^^^^^^^
   |
help: Alias `tensorflow` to `tf`

ICN001 `holoviews` should be imported as `hv`
  --> custom.py:11:8
   |
11 | import holoviews  # unconventional
   |        ^^^^^^^^^
   |
help: Alias `holoviews` to `hv`

ICN001 `panel` should be imported as `pn`
  --> custom.py:12:8
   |
12 | import panel  # unconventional
   |        ^^^^^
   |
help: Alias `panel` to `pn`

ICN001 `plotly.express` should be imported as `px`
  --> custom.py:13:8
   |
13 | import plotly.express  # unconventional
   |        ^^^^^^^^^^^^^^
   |
help: Alias `plotly.express` to `px`

ICN001 `matplotlib` should be imported as `mpl`
  --> custom.py:14:8
   |
14 | import matplotlib  # unconventional
   |        ^^^^^^^^^^
   |
help: Alias `matplotlib` to `mpl`

ICN001 `polars` should be imported as `pl`
  --> custom.py:15:8
   |
15 | import polars  # unconventional
   |        ^^^^^^
   |
help: Alias `polars` to `pl`

ICN001 `pyarrow` should be imported as `pa`
  --> custom.py:16:8
   |
16 | import pyarrow  # unconventional
   |        ^^^^^^^
   |
help: Alias `pyarrow` to `pa`

ICN001 `altair` should be imported as `alt`
  --> custom.py:18:18
   |
18 | import altair as altr  # unconventional
   |                  ^^^^
   |
help: Alias `altair` to `alt`

ICN001 `matplotlib.pyplot` should be imported as `plt`
  --> custom.py:19:29
   |
19 | import matplotlib.pyplot as plot  # unconventional
   |                             ^^^^
   |
help: Alias `matplotlib.pyplot` to `plt`

ICN001 `dask.array` should be imported as `da`
  --> custom.py:20:22
   |
20 | import dask.array as darray  # unconventional
   |                      ^^^^^^
   |
help: Alias `dask.array` to `da`

ICN001 `dask.dataframe` should be imported as `dd`
  --> custom.py:21:26
   |
21 | import dask.dataframe as ddf  # unconventional
   |                          ^^^
   |
help: Alias `dask.dataframe` to `dd`

ICN001 `numpy` should be imported as `np`
  --> custom.py:22:17
   |
22 | import numpy as nmp  # unconventional
   |                 ^^^
   |
help: Alias `numpy` to `np`

ICN001 `pandas` should be imported as `pd`
  --> custom.py:23:18
   |
23 | import pandas as pdas  # unconventional
   |                  ^^^^
   |
help: Alias `pandas` to `pd`

ICN001 `seaborn` should be imported as `sns`
  --> custom.py:24:19
   |
24 | import seaborn as sbrn  # unconventional
   |                   ^^^^
   |
help: Alias `seaborn` to `sns`

ICN001 `tensorflow` should be imported as `tf`
  --> custom.py:25:22
   |
25 | import tensorflow as tfz  # unconventional
   |                      ^^^
   |
help: Alias `tensorflow` to `tf`

ICN001 `holoviews` should be imported as `hv`
  --> custom.py:26:21
   |
26 | import holoviews as hsv  # unconventional
   |                     ^^^
   |
help: Alias `holoviews` to `hv`

ICN001 `panel` should be imported as `pn`
  --> custom.py:27:17
   |
27 | import panel as pns  # unconventional
   |                 ^^^
   |
help: Alias `panel` to `pn`

ICN001 `plotly.express` should be imported as `px`
  --> custom.py:28:26
   |
28 | import plotly.express as pltx  # unconventional
   |                          ^^^^
   |
help: Alias `plotly.express` to `px`

ICN001 `matplotlib` should be imported as `mpl`
  --> custom.py:29:22
   |
29 | import matplotlib as ml  # unconventional
   |                      ^^
   |
help: Alias `matplotlib` to `mpl`

ICN001 `polars` should be imported as `pl`
  --> custom.py:30:18
   |
30 | import polars as ps # unconventional
   |                  ^^
   |
help: Alias `polars` to `pl`

ICN001 `pyarrow` should be imported as `pa`
  --> custom.py:31:19
   |
31 | import pyarrow as arr  # unconventional
   |                   ^^^
   |
help: Alias `pyarrow` to `pa`

ICN001 `numpy.typing` should be imported as `npt`
  --> custom.py:50:8
   |
50 | import numpy.typing  # unconventional
   |        ^^^^^^^^^^^^
   |
help: Alias `numpy.typing` to `npt`

ICN001 `numpy.typing` should be imported as `npt`
  --> custom.py:51:24
   |
51 | import numpy.typing as nt  # unconventional
   |                        ^^
   |
help: Alias `numpy.typing` to `npt`
